tests/requests/valid/rfc9112_target_absolute_https_01.http
GET https://example.com/foo HTTP/1.1\r\n
Host: example.com\r\n
\r\n
